--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -717,6 +717,7 @@
     "sent_photo": "Sent an photo",
     "sent_video": "Sent a video",
     "sent": "Sent",
+    "sent_file": "Sent file",
     "photo_videos": "photos and videos",
     "photos": "photos",
     "videos": "videos",
