--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -735,6 +735,7 @@
     "sent_photo": "Gửi ảnh",
     "sent_video": "Gửi video",
     "sent": "Gửi",
+    "sent_file": "Gửi file",
     "photo_videos": "ảnh và video",
     "photos": "Ảnh",
     "videos": "videos",
