update layout ui

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -288,8 +288,8 @@
     "save": "Lưu",
     "copied_clipboard": "Đã sao chép vào bộ nhớ tạm",
     "notifications": "Thông báo",
-    "unmute": "Bật thông báo",
-    "mute": "Tắt thông báo",
+    "unmute": "Bật",
+    "mute": "Tắt",
     "invite_friend": "Thêm thành viên",
     "unblock_user": "Bỏ chặn người dùng",
     "block_user": "Chặn người dùng",
